[gd_scene load_steps=41 format=3 uid="uid://875d70v45smd"]

[ext_resource type="Script" path="res://Scripts/enemy/mimic.gd" id="1_jwo0i"]
[ext_resource type="Texture2D" uid="uid://be3mshe7llva8" path="res://Assets/Sprites/enemies/mimic.png" id="2_3bp77"]
[ext_resource type="PackedScene" uid="uid://q3bng0o4u44l" path="res://Scenes/enemies/damage_player.tscn" id="3_3er4u"]
[ext_resource type="AudioStream" uid="uid://7t416r1qbiq6" path="res://Assets/Audio/mimic/mimic_hurt.mp3" id="4_4ahau"]
[ext_resource type="AudioStream" uid="uid://78rcq05af78m" path="res://Assets/Audio/mimic/mimic_spawn.mp3" id="4_vwme5"]
[ext_resource type="AudioStream" uid="uid://byblnn5qjm52g" path="res://Assets/Audio/mimic/mimic_death.mp3" id="5_trkmr"]
[ext_resource type="AudioStream" uid="uid://btgaa6ven3j1h" path="res://Assets/Audio/mimic/small-monster-attack-195712.mp3" id="6_j6mq5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yuh82"]
radius = 8.0
height = 26.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6k7h3"]
resource_local_to_scene = true

[sub_resource type="AtlasTexture" id="AtlasTexture_lf7qj"]
atlas = ExtResource("2_3bp77")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcusw"]
atlas = ExtResource("2_3bp77")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq1k1"]
atlas = ExtResource("2_3bp77")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq5av"]
atlas = ExtResource("2_3bp77")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq0it"]
atlas = ExtResource("2_3bp77")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_om6vm"]
atlas = ExtResource("2_3bp77")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmbkv"]
atlas = ExtResource("2_3bp77")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfgto"]
atlas = ExtResource("2_3bp77")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6su08"]
atlas = ExtResource("2_3bp77")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8m5c"]
atlas = ExtResource("2_3bp77")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1e8u"]
atlas = ExtResource("2_3bp77")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjbyc"]
atlas = ExtResource("2_3bp77")
region = Rect2(48, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh0tq"]
atlas = ExtResource("2_3bp77")
region = Rect2(64, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7ndx"]
atlas = ExtResource("2_3bp77")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu3is"]
atlas = ExtResource("2_3bp77")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26m0n"]
atlas = ExtResource("2_3bp77")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4hlj"]
atlas = ExtResource("2_3bp77")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_faf28"]
atlas = ExtResource("2_3bp77")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l70l"]
atlas = ExtResource("2_3bp77")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_clt8m"]
atlas = ExtResource("2_3bp77")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu8fw"]
atlas = ExtResource("2_3bp77")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi0cc"]
atlas = ExtResource("2_3bp77")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbhiv"]
atlas = ExtResource("2_3bp77")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqf5g"]
atlas = ExtResource("2_3bp77")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iexx2"]
atlas = ExtResource("2_3bp77")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7b1w"]
atlas = ExtResource("2_3bp77")
region = Rect2(64, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kvfmi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf7qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcusw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq1k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq5av")
}],
"loop": false,
"name": &"attack_left",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq0it")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_om6vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmbkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfgto")
}],
"loop": false,
"name": &"attack_right",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6su08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8m5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1e8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjbyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh0tq")
}],
"loop": false,
"name": &"dying",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7ndx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu3is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26m0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4hlj")
}],
"loop": false,
"name": &"land_left",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_faf28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l70l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clt8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu8fw")
}],
"loop": false,
"name": &"land_right",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi0cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbhiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqf5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iexx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7b1w")
}],
"loop": false,
"name": &"spawning",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cagpp"]
radius = 8.0
height = 20.0

[sub_resource type="Animation" id="Animation_ly7xv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5mjcq"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4hf0x"]
_data = {
"RESET": SubResource("Animation_ly7xv"),
"hit_flash": SubResource("Animation_5mjcq")
}

[node name="mimic" type="CharacterBody2D"]
collision_layer = 12
collision_mask = 9
script = ExtResource("1_jwo0i")

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(2.30926e-13, -14)
shape = SubResource("CapsuleShape2D_yuh82")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_6k7h3")
position = Vector2(0, -14)
sprite_frames = SubResource("SpriteFrames_kvfmi")
animation = &"dying"

[node name="DamagePlayer" parent="." instance=ExtResource("3_3er4u")]
position = Vector2(0, -34)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamagePlayer"]
position = Vector2(0, 20)
shape = SubResource("CapsuleShape2D_cagpp")

[node name="Attack_timer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="Death_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Spawn_timer" type="Timer" parent="."]
one_shot = true

[node name="collision_with_player" type="CharacterBody2D" parent="."]
position = Vector2(0, -5)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_with_player"]
position = Vector2(0, 3)
rotation = 1.5708

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -21)
stream = ExtResource("4_4ahau")
volume_db = -2.0
bus = &"Sound Effect"

[node name="SpawnSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -21)
stream = ExtResource("4_vwme5")
volume_db = 3.0
bus = &"Sound Effect"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -21)
stream = ExtResource("5_trkmr")
volume_db = 7.0
bus = &"Sound Effect"

[node name="attack_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_j6mq5")
volume_db = -3.0
bus = &"Sound Effect"

[node name="Hit_Flash_animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4hf0x")
}

[node name="hit_flash_animation_timer" type="Timer" parent="Hit_Flash_animation_player"]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="Attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Hit_Flash_animation_player/hit_flash_animation_timer" to="." method="_on_hit_flash_animation_timer_timeout"]
